--- a/sitio-gimnasio/src/app/globals.css
+++ b/sitio-gimnasio/src/app/globals.css
@@ -4,12 +4,13 @@
 
 :root{
   --bg: rgb(0, 15, 1);
-  --text: aliceblue;
+  --text: #708064;
 }
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Space Grotesk', sans-serif !important;
 }
 body{
   background-color: var(--bg);
@@ -56,10 +57,74 @@ a{
 }
 
 .switch input:checked + .slider {
-  box-shadow: 0 0 10px rgba(187, 153, 221, 0.8);
-  border: 2px solid #BB99DD;
+  box-shadow: 0 0 10px #54761a;
+  border: 2px solid #9fe01e;
 }
 
 .switch input:checked + .slider:before {
   transform: translateX(1.5em);
+}
+.sign-popup-container {
+  width: 30vw;
+ }
+ 
+ /* Estilo para pantallas móviles */
+ @media (max-width: 768px) {
+  .sign-popup-container {
+     width: 90%;
+  }
+ }
+
+ .loading-bar {
+  position: relative;
+  width: 110px;
+  height: 110px;
+  background: transparent;
+  border: px solid #3c3c3c;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 111px;
+  font-family: sans-serif;
+  font-size: 12px;
+  color: #54761a;
+  letter-spacing: 2px;
+  text-shadow: 0 0 20px #54761a;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+}
+
+.loading-bar:before {
+  content: "";
+  position: absolute;
+  top: -3px;
+  left: -3px;
+  width: 100%;
+  height: 100%;
+  border: 3px solid transparent;
+  border-top: 5px solid #9fe01e;
+  border-right: 5px solid #9fe01e;
+  border-radius: 50%;
+  animation: animateC 2s linear infinite;
+}
+
+@keyframes animateC {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes animate {
+  0% {
+    transform: rotate(45deg);
+  }
+
+  100% {
+    transform: rotate(405deg);
+  }
+}
+.swiper-button-prev, .swiper-button-next {
+  color: #b7333d !important;
 }
