--- a/sitio-gimnasio/src/app/globals.css
+++ b/sitio-gimnasio/src/app/globals.css
@@ -3,8 +3,8 @@
 @import 'tailwindcss/utilities';
 
 :root{
-  --bg: rgb(0, 15, 1);
-  --text: aliceblue;
+  --bg: #e9e9e9;
+  /* --text: aliceblue; */
 }
 *{
   margin: 0;
@@ -63,3 +63,31 @@ a{
 .switch input:checked + .slider:before {
   transform: translateX(1.5em);
 }
+
+.main-container {
+  padding-top: 60px;
+}
+
+.home-section-header {
+  width: 300px;
+}
+
+.start-button {
+  margin-top: 60px;
+  margin-left: 200px;
+}
+
+@media (max-width: 1024px) {
+  .start-button{ 
+    margin-top: 200px;
+    margin-left: 120px;
+  }
+}
+
+@media (max-width: 768px) {
+  .start-button{ 
+    margin-top: 150px;
+    margin-left: 0px;
+  }
+}
+
