--- a/sitio-gimnasio/src/app/globals.css
+++ b/sitio-gimnasio/src/app/globals.css
@@ -143,17 +143,26 @@ a{
   margin-left: 200px;
 }
 
-@media (max-width: 1024px) {
-  .start-button{ 
-    margin-top: 200px;
-    margin-left: 120px;
-  }
+.home-area-card {
+  width: 450px;
+  height: 150px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1025px) {
   .start-button{ 
-    margin-top: 150px;
+    margin-top: 230px;
     margin-left: 0px;
   }
 }
 
+@media (max-width: 769px) {
+  .start-button{ 
+    margin-top: 170px;
+    margin-left: 0px;
+  }
+
+  .home-area-card {
+    width: 300px;
+    height: 100px;
+  }
+}
