--- a/sitio-gimnasio/src/app/globals.css
+++ b/sitio-gimnasio/src/app/globals.css
@@ -81,15 +81,15 @@ a{
   width: 110px;
   height: 110px;
   background: transparent;
-  border: px solid #3c3c3c;
+  border: px solid #262626;
   border-radius: 50%;
   text-align: center;
   line-height: 111px;
   font-family: sans-serif;
   font-size: 12px;
-  color: #54761a;
+  color: #262626;
   letter-spacing: 2px;
-  text-shadow: 0 0 20px #54761a;
+  text-shadow: 0 0 20px #262626;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
@@ -101,8 +101,8 @@ a{
   width: 100%;
   height: 100%;
   border: 3px solid transparent;
-  border-top: 5px solid #9fe01e;
-  border-right: 5px solid #9fe01e;
+  border-top: 5px solid #262626;
+  border-right: 5px solid #262626;
   border-radius: 50%;
   animation: animateC 2s linear infinite;
 }
